tests/good/apples.lens
var totalApples = 0;

match{
    "(?<numApples>\d+) apples";
    "^(?<name>[^ ]*)"
}


stream{
    print(e.name);
}

stream{
    totalApples += parseInt(e.numApples);
    if(totalApples > 10) 
    	print("We picked too many apples: " + totalApples);
}

